added splain site structure to index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/62b16d6f9d.js" crossorigin="anonymous"></script>
+    <title>My Daily Dashboard</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <div>
+                <h1>My Daily Dashboard</h1>
+            </div>
+            <div>
+                <i class="far fa-question-circle"></i>
+            </div>
+        </div>
+    </header>
+    <section>
+        <div>Joke of the day</div>
+        <div>Weather today</div>
+        <div>Movie today</div>
+        <div>Recipe of the day</div>
+    </section>
+    <footer>
+        <div><i class="far fa-copyright"></i>Jacqueline Kraus</div>
+    </footer>
 </body>
 </html>
