added structure to divs in section with bootstrap grid

--- a/index.html
+++ b/index.html
@@ -23,10 +23,30 @@
         </div>
     </header>
     <section>
-        <div>Joke of the day</div>
-        <div>Weather today</div>
-        <div>Movie today</div>
-        <div>Recipe of the day</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    Joke of the day
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    Weather today
+                </div>
+                <div class="col">
+                    Movie today
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    Recipe of the day
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div><i class="far fa-copyright"></i>Jacqueline Kraus</div>
