--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="fixed-bottom footer-style text-center">
         <div><i class="far fa-copyright"></i>Jacqueline Kraus</div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
