added boxes classes

--- a/index.html
+++ b/index.html
@@ -10,47 +10,56 @@
     <title>My Daily Dashboard</title>
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <div class="container-fluid header-style">
             <div class="row">
-                <div class="col-8 text-center">
+                <div class="col-11 text-center">
                     <h1>My Daily Dashboard</h1>
                 </div>
-                <div class="col-4 text-center">
+                <div class="col-1 text-right">
                     <i class="far fa-question-circle"></i>
                 </div>
             </div>
         </div>
     </header>
+    <!-- SECTION WITH WIDGETS -->
     <section>
-        <div class="container-fluid">
+        <!-- JOKE WIDGET-->
+        <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col boxes">
                     Joke of the day
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <!-- WEATHER & MOVIE WIDGET-->
+        <div class="container">
             <div class="row">
-                <div class="col">
+                <!-- WEATHER -->
+                <div class="col boxes">
                     Weather today
                 </div>
-                <div class="col">
+                <!-- MOVIE -->
+                <div class="col boxes">
                     Movie today
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <!-- RECIPE WIDGET-->
+        <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col boxes">
                     Recipe of the day
                 </div>
             </div>
         </div>
     </section>
+    <!-- FOOTER -->
     <footer class="fixed-bottom footer-style text-center">
         <div><i class="far fa-copyright"></i>Jacqueline Kraus</div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
