--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <!-- HEADER -->
     <header>
         <div class="container-fluid header-style">
-            <div class="row">
-                <div class="col-11 text-center">
-                    <h1>My Daily Dashboard</h1>
-                </div>
-                <div class="col-1 text-right">
+            <div class="row">    
+                <div class="col text-right faq-box">
                     <i class="far fa-question-circle"></i>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center page-headline">
+                    <h1>My Daily Dashboard</h1>
                 </div>
             </div>
         </div>
@@ -29,7 +31,7 @@
         <div class="container">
             <div class="row">
                 <div class="col boxes">
-                    Joke of the day
+                    <h3 class="text-center">Joke of the day</h3>
                 </div>
             </div>
         </div>
@@ -38,11 +40,11 @@
             <div class="row">
                 <!-- WEATHER -->
                 <div class="col boxes">
-                    Weather today
+                    <h3 class="text-center">Weather today</h3>
                 </div>
                 <!-- MOVIE -->
                 <div class="col boxes">
-                    Movie today
+                    <h3 class="text-center">Movie today</h3>
                 </div>
             </div>
         </div>
@@ -50,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="col boxes">
-                    Recipe of the day
+                    <h3 class="text-center">Recipe of the day</h3>
                 </div>
             </div>
         </div>
