--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
                 <!-- WEATHER -->
                 <div class="col boxes">
                     <h3 class="text-center">Weather today</h3>
+                    <div class="col text-center">
+                        <button type="button" class="btn btn-info">Change Location</button>
+                    </div>
                 </div>
                 <!-- MOVIE -->
                 <div class="col boxes">
                     <h3 class="text-center">Movie today</h3>
+                    <div class="col text-center">
+                        <button type="button" class="btn btn-info">See Information</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -53,6 +59,9 @@
             <div class="row">
                 <div class="col boxes">
                     <h3 class="text-center">Recipe of the day</h3>
+                    <div class="col text-center">
+                        <button type="button" class="btn btn-info">Check Details</button>
+                    </div>
                 </div>
             </div>
         </div>
