achanged 1st box structure and created classes, added classes to index.html

--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
     <!-- SECTION WITH WIDGETS -->
     <section>
         <!-- JOKE WIDGET-->
-        <div class="container">
+        <div class="container boxes">
             <div class="row">
-                <div class="col boxes">
+                <div class="col innerbox-headline">
                     <h3 class="text-center">Joke of the day</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col innerbox-content">
+                    <h3 class="text-center">CONTENT</h3>
                 </div>
             </div>
         </div>
