added style and strcuture to boxes

--- a/index.html
+++ b/index.html
@@ -45,26 +45,57 @@
             <div class="row">
                 <!-- WEATHER -->
                 <div class="col boxes">
-                    <h3 class="text-center">Weather today</h3>
-                    <div class="col text-center">
-                        <button type="button" class="btn btn-info">Change Location</button>
+                    <div class="row">
+                        <div class="col innerbox-headline">
+                            <h3 class="text-center">Weather today</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col innerbox-content">
+                            <h3 class="text-center">CONTENT</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-center innerbox-button">
+                            <button type="button" class="btn btn-info">Change Location</button>
+                        </div>
                     </div>
                 </div>
                 <!-- MOVIE -->
                 <div class="col boxes">
-                    <h3 class="text-center">Movie today</h3>
-                    <div class="col text-center">
-                        <button type="button" class="btn btn-info">See Information</button>
+                    <div class="row">
+                        <div class="col innerbox-headline">
+                            <h3 class="text-center">Movie today</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col innerbox-content">
+                            <h3 class="text-center">CONTENT</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-center innerbox-button">
+                            <button type="button" class="btn btn-info">See Information</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- RECIPE WIDGET-->
-        <div class="container">
-            <div class="row">
-                <div class="col boxes">
-                    <h3 class="text-center">Recipe of the day</h3>
-                    <div class="col text-center">
+        <div class="container boxes">
+            <div class="col">
+                <div class="row">
+                    <div class="col innerbox-headline">
+                        <h3 class="text-center">Recipe of the day</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col innerbox-content">
+                        <h3 class="text-center">CONTENT</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center innerbox-button">
                         <button type="button" class="btn btn-info">Check Details</button>
                     </div>
                 </div>
