added classes to jokes and recipes boxes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        <div class="container-fluid header-style">
+        <div class="container-fluid header-style fixed-top">
             <div class="row">    
                 <div class="col text-right faq-box">
                     <i class="far fa-question-circle"></i>
@@ -20,7 +20,7 @@
             </div>
             <div class="row">
                 <div class="col text-center page-headline">
-                    <h1>My Daily Dashboard</h1>
+                    <h1 class="text-uppercase">My Daily Dashboard</h1>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
     <!-- SECTION WITH WIDGETS -->
     <section>
         <!-- JOKE WIDGET-->
-        <div class="container boxes">
+        <div class="container boxes joke-container ">
             <div class="row">
                 <div class="col innerbox-headline">
                     <h3 class="text-center">Joke of the day</h3>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <!-- RECIPE WIDGET-->
-        <div class="container boxes">
+        <div class="container boxes recipe-container">
             <div class="col">
                 <div class="row">
                     <div class="col innerbox-headline">
