--- a/index.html
+++ b/index.html
@@ -101,7 +101,28 @@
                     </div>
                     <div class="row">
                         <div class="col text-center innerbox-button">
-                            <button type="button" class="btn btn-info">See Information</button>
+                            <button class="btn btn-info" id="movieButton" data-toggle="modal" data-target="#movieModal">See Information</button>
+                            <!-- Movie Modal -->
+                            <div class="modal fade" id="movieModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">MOVIE TITLE</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="" href="" title="" target="_blank">
+                                            <h6>DESCRIPTION</h6>
+                                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti commodi similique sint, labore nam mollitia earum itaque doloremque cumque omnis vero minima fugit magni sit provident quia non, ea illum?</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
