--- a/index.html
+++ b/index.html
@@ -143,7 +143,42 @@
                 </div>
                 <div class="row">
                     <div class="col text-center innerbox-button">
-                        <button type="button" class="btn btn-info">Check Details</button>
+                        <button class="btn btn-info" id="recipeButton" data-toggle="modal" data-target="#recipeModal">Check Details</button>
+                        <!-- Recipe Modal -->
+                        <div class="modal fade" id="recipeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">RECIPE TITLE</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <img src="" href="" title="" target="_blank">
+                                                    <h6>Ingredients</h6>
+                                                    <ul>
+                                                        <li>example</li>
+                                                        <li>example</li>
+                                                        <li>example</li>
+                                                    </ul>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <h6>Preparation</h6>
+                                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti commodi similique sint, labore nam mollitia earum itaque doloremque cumque omnis vero minima fugit magni sit provident quia non, ea illum?</p>
+                                                </div>
+                                            </div>    
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
