created container div with id for ingredients list

--- a/index.html
+++ b/index.html
@@ -160,15 +160,12 @@
                                                 <div class="col-md-6">
                                                     <img src="" href="" title="" target="_blank">
                                                     <h6>Ingredients</h6>
-                                                    <ul>
-                                                        <li>example</li>
-                                                        <li>example</li>
-                                                        <li>example</li>
-                                                    </ul>
+                                                    <div id="mealIngredientsList">
+                                                    </div>
                                                 </div>
-                                                <div class="col-md-6">
-                                                    <h6>Preparation</h6>
-                                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti commodi similique sint, labore nam mollitia earum itaque doloremque cumque omnis vero minima fugit magni sit provident quia non, ea illum?</p>
+                                            <div class="col-md-6">
+                                                <h6>Preparation</h6>
+                                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti commodi similique sint, labore nam mollitia earum itaque doloremque cumque omnis vero minima fugit magni sit provident quia non, ea illum?</p>
                                                 </div>
                                             </div>    
                                         </div>
