--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                 </div>
                 <div class="row">
                     <div class="col innerbox-content">
-                        <h3 class="text-center">CONTENT</h3>
+                        <h3 class="text-center" id="meal-title"></h3>
+                        <img id="meal-image" class="img-fluid">
                     </div>
                 </div>
                 <div class="row">
@@ -149,7 +150,7 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">RECIPE TITLE</h5>
+                                        <h5 class="modal-title" id="modal-meal-title">RECIPE TITLE</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -165,7 +166,7 @@
                                                 </div>
                                             <div class="col-md-6">
                                                 <h6>Preparation</h6>
-                                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti commodi similique sint, labore nam mollitia earum itaque doloremque cumque omnis vero minima fugit magni sit provident quia non, ea illum?</p>
+                                                <p id="meal-preparation"></p>
                                                 </div>
                                             </div>    
                                         </div>
