added showJoke function and renderShow fundction to show joke on website load

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="row">
                 <div class="col innerbox-content">
-                    <h3 class="text-center">CONTENT</h3>
+                    <p id="joke"></p>
                 </div>
             </div>
         </div>
