added img element for movie id

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                     </div>
                     <div class="row">
                         <div class="col innerbox-content">
-                            <h3 class="text-center">CONTENT</h3>
+                            <p id='movie-content'></p>
+                            <img id="movie-image" src="" alt="">
                         </div>
                     </div>
                     <div class="row">
