--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="row">
                         <div class="col innerbox-content">
-                            <p id='movie-content'></p>
+                            <p id='movie-title'></p>
                             <img id="movie-image" src="" alt="">
                         </div>
                     </div>
@@ -108,15 +108,15 @@
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">MOVIE TITLE</h5>
+                                            <h5 class="modal-title" id="movie-title-modal">MOVIE TITLE</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </div>
                                         <div class="modal-body">
                                             <img src="" href="" title="" target="_blank">
-                                            <h6>DESCRIPTION</h6>
-                                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti commodi similique sint, labore nam mollitia earum itaque doloremque cumque omnis vero minima fugit magni sit provident quia non, ea illum?</p>
+                                            <p id="movie-description-modal"></p>
+                                            <p>Release Date: <span id="movie-release-date-modal"></span></p>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
