--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                     </div>
                     <div class="row">
                         <div class="col innerbox-content">
-                            <h3 class="text-center">CONTENT</h3>
+                            <div>
+                            <img src="" href="" title="" target="_blank" id="weather-icon"></img>
+                            <div id="weather-main"></div>
+                            <div id="weather-sys"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
