changed modal for weather

--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
                                             <form>
                                                 <div class="form-group">
                                                 <label for="new-location" class="col-form-label">New Location:</label>
-                                                <input type="text" class="form-control" id="rnew-location">
+                                                <input type="text" class="form-control" id="new-location">
                                                 </div>
                                             </form>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                            <input id="submit-change-location" class="btn btn-primary" type="submit" value="Save changes">
                                         </div>
                                     </div>
                                 </div>
