changed structure of weather modal, to have not an input field in modal footer but a button on modal body

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
                                             </button>
                                         </div>
                                         <div class="modal-body">
-                                            <form>
-                                                <div class="form-group">
-                                                <label for="new-location" class="col-form-label">New Location:</label>
-                                                <input type="text" class="form-control" id="new-location">
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <input id="submit-change-location" class="btn btn-primary" type="submit" value="Save changes">
+                                            <div>
+                                                <form>
+                                                        <div id="type-location" class="form-group">
+                                                        <label for="new-location" class="col-form-label">Type your new Location:</label>
+                                                        <input type="text" class="form-control" id="new-location">
+                                                        <button id="submit-change-location" class="btn btn-primary" type="submit">Save changes</button>
+                                                        </div>
+                                                </form>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
