added div with id for name of location for weather block

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <div class="row">
                         <div class="col innerbox-content">
                             <div>
+                            <div id="location-name"></div>
                             <img src="" href="" title="" target="_blank" id="weather-icon"></img>
                             <div id="weather-main-temp"></div>
                             <div id="weather-main-max-temp"></div>
