--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
     </section>
     <!-- FOOTER -->
-    <footer class="fixed-bottom footer-style text-center">
+    <footer class="footer-style text-center">
         <div><i class="far fa-copyright"></i>Jacqueline Kraus</div>
     </footer>
     <!-- SCRIPTS -->
