--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- HEADER -->
     <header>
         <div class="container-fluid header-style fixed-top">
-            <div class="row">    
-                <div class="col text-right faq-box">
+            <div class="row text-right ">    
+                <div class="col faq-box">
                     <i class="far fa-question-circle"></i>
                 </div>
             </div>
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row">
                 <!-- WEATHER -->
-                <div class="col boxes">
+                <div class="col boxes mr-md-5">
                     <div class="row">
                         <div class="col innerbox-headline">
                             <h3 class="text-center">Weather today</h3>
