added newly created classes for alignment, height and style

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col innerbox-content">
+                        <div class="col innerbox-content two-boxes-row-height">
                             <div>
                             <div id="location-name"></div>
                             <img src="" href="" title="" target="_blank" id="weather-icon"></img>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col innerbox-content">
+                        <div class="col innerbox-content two-boxes-row-height">
                             <p id='movie-title'></p>
                             <img id="movie-image" src="" alt="">
                         </div>
