added break in content of weather widget

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- SECTION WITH WIDGETS -->
     <section>
         <!-- JOKE WIDGET-->
-        <div class="container boxes joke-container ">
+        <div class="container boxes joke-container">
             <div class="row">
                 <div class="col innerbox-headline">
                     <h3 class="text-center">Joke of the day</h3>
@@ -60,6 +60,7 @@
                             <div id="weather-main-max-temp"></div>
                             <div id="weather-main-min-temp"></div>
                             <div id="weather-main-feel"></div>
+                            <br>
                             <div id="weather-sys-sunrise"></div>
                             <div id="weather-sys-sunset"></div>
                             </div>
@@ -147,7 +148,7 @@
                 </div>
                 <div class="row">
                     <div class="col innerbox-content">
-                        <h3 class="text-center" id="meal-title"></h3>
+                        <p class="text-center" id="meal-title"></p>
                         <img id="meal-image" class="img-fluid">
                     </div>
                 </div>
@@ -193,7 +194,7 @@
     </section>
     <!-- FOOTER -->
     <footer class="footer-style text-center">
-        <div><i class="far fa-copyright"></i>Jacqueline Kraus</div>
+        <div><i class="far fa-copyright"></i> Jacqueline Kraus</div>
     </footer>
     <!-- SCRIPTS -->
     <script src="assets/js/script.js" type="text/javascript"></script>
