changed order of content elements in weather box, changed script to template literals for weather box, added icons to weather box

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
                             <div id="location-name"></div>
                             <img src="" href="" title="" target="_blank" id="weather-icon"></img>
                             <div id="weather-main-temp"></div>
-                            <div id="weather-main-max-temp"></div>
-                            <div id="weather-main-min-temp"></div>
                             <div id="weather-main-feel"></div>
                             <br>
                             <div id="weather-sys-sunrise"></div>
                             <div id="weather-sys-sunset"></div>
+                            <br>
+                            <div class="smaller-font-size" id="weather-main-max-temp"></div>
+                            <div class="smaller-font-size" id="weather-main-min-temp"></div>
                             </div>
                         </div>
                     </div>
