changed style of weather modal: fixed alignment, color of button and content

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
                                             <div>
                                                 <form>
                                                         <div id="type-location" class="form-group">
-                                                        <label for="new-location" class="col-form-label">Type your new Location:</label>
+                                                        <label for="new-location" class="col-form-label font-lato">Please type your new location:</label>
+                                                        <br>
                                                         <input type="text" class="form-control" id="new-location">
-                                                        <button id="submit-change-location" class="btn btn-primary" type="button" data-dismiss="modal">Save changes</button>
+                                                        <br>
+                                                        <button id="submit-change-location" class="btn btn-info" type="button" data-dismiss="modal">Save changes</button>
                                                         </div>
                                                 </form>
                                             </div>
