--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="row">
                         <div class="col innerbox-content two-boxes-row-height">
                             <p id='movie-title'></p>
-                            <img id="movie-image" src="" alt="">
+                            <img id="movie-image" src="" alt="movie of the day">
                         </div>
                     </div>
                     <div class="row">
@@ -125,10 +125,10 @@
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </div>
-                                        <div class="modal-body">
+                                        <div class="modal-body movie-modal-style">
                                             <img src="" href="" title="" target="_blank">
                                             <p id="movie-description-modal"></p>
-                                            <p>Release Date: <span id="movie-release-date-modal"></span></p>
+                                            <p id="movie-release-date-modal"></p>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
