--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container boxes joke-container">
             <div class="row">
                 <div class="col innerbox-headline">
-                    <h3 class="text-center">Joke of the day</h3>
+                    <h3 class="text-center">Joke of the day <i class="fas fa-redo refresh-button"></i></h3>
                 </div>
             </div>
             <div class="row">
