--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="col">
                 <div class="row">
                     <div class="col innerbox-headline">
-                        <h3 class="text-center">Recipe of the day <i class="fas fa-redo refresh-button"></i></h3>
+                        <h3 class="text-center meal-headline">Recipe of the day <i class="fas fa-redo refresh-button"></i></h3>
                     </div>
                 </div>
                 <div class="row">
