--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="col boxes mr-md-5">
                     <div class="row">
                         <div class="col innerbox-headline">
-                            <h3 class="text-center">Weather today</h3>
+                            <h3 class="text-center weather-headline">Weather today</h3>
                         </div>
                     </div>
                     <div class="row">
