validated html and resolved some issues in img tags in index.html

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <!-- HEADER -->
     <header>
         <div class="container-fluid header-style fixed-top">
-            <div class="row text-right ">    
+            <div class="row text-right">
+                <!-- FAQ -->
                 <div class="col faq-box">
                     <i class="far fa-question-circle"></i>
                 </div>
             </div>
             <div class="row">
+                <!-- Page Headline -->
                 <div class="col text-center page-headline">
                     <h1 class="text-uppercase">My Daily Dashboard</h1>
                 </div>
@@ -31,11 +33,13 @@
         <!-- JOKE WIDGET-->
         <div class="container boxes joke-container">
             <div class="row">
+                <!-- Joke Headline -->
                 <div class="col innerbox-headline">
                     <h3 class="text-center">Joke of the day <i class="fas fa-redo refresh-button"></i></h3>
                 </div>
             </div>
             <div class="row">
+                <!-- Joke Content -->
                 <div class="col innerbox-content">
                     <p id="joke"></p>
                 </div>
@@ -55,7 +59,7 @@
                         <div class="col innerbox-content two-boxes-row-height">
                             <div>
                             <div id="location-name"></div>
-                            <img src="" href="" title="" target="_blank" id="weather-icon"></img>
+                            <img src="" title="weather" id="weather-icon">
                             <div id="weather-main-temp"></div>
                             <div id="weather-main-feel"></div>
                             <br>
@@ -109,7 +113,7 @@
                     <div class="row">
                         <div class="col innerbox-content two-boxes-row-height">
                             <p id='movie-title'></p>
-                            <img id="movie-image" src="" alt="movie of the day">
+                            <img src="" id="movie-image" alt="movie of the day">
                         </div>
                     </div>
                     <div class="row">
@@ -126,7 +130,6 @@
                                             </button>
                                         </div>
                                         <div class="modal-body movie-modal-style">
-                                            <img src="" href="" title="" target="_blank">
                                             <p id="movie-description-modal"></p>
                                             <p id="movie-release-date-modal"></p>
                                         </div>
@@ -152,7 +155,7 @@
                 <div class="row">
                     <div class="col innerbox-content">
                         <p class="text-center" id="meal-title"></p>
-                        <img id="meal-image" class="img-fluid">
+                        <img src="" id="meal-image" title="meal of the day" class="img-fluid">
                     </div>
                 </div>
                 <div class="row">
@@ -172,7 +175,6 @@
                                         <div class="container">
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    <img src="" href="" title="" target="_blank">
                                                     <h6>Ingredients</h6>
                                                     <div id="mealIngredientsList">
                                                     </div>
