added to all refresh-button icons an onclick event to bcall the appropriate function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <!-- Joke Headline -->
                 <div class="col innerbox-headline">
-                    <h3 class="text-center">Joke of the day <i class="fas fa-redo refresh-button"></i></h3>
+                    <h3 class="text-center">Joke of the day <i class="fas fa-redo refresh-button" onclick="showJoke()"></i></h3>
                 </div>
             </div>
             <div class="row">
@@ -107,7 +107,7 @@
                 <div class="col boxes">
                     <div class="row">
                         <div class="col innerbox-headline">
-                            <h3 class="text-center">Movie today <i class="fas fa-redo refresh-button"></i></h3>
+                            <h3 class="text-center">Movie today <i class="fas fa-redo refresh-button" onclick="showMovie()"></i></h3>
                         </div>
                     </div>
                     <div class="row">
@@ -149,7 +149,7 @@
             <div class="col">
                 <div class="row">
                     <div class="col innerbox-headline">
-                        <h3 class="text-center meal-headline">Recipe of the day <i class="fas fa-redo refresh-button"></i></h3>
+                        <h3 class="text-center meal-headline">Recipe of the day <i class="fas fa-redo refresh-button" onclick="showMeal()"></i></h3>
                     </div>
                 </div>
                 <div class="row">
