added alert to weather modal

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                     <div class="row">
                         <div class="col innerbox-content two-boxes-row-height">
                             <div>
-                            <div id="location-name"></div>
-                            <img src="" title="weather" id="weather-icon">
-                            <div id="weather-main-temp"></div>
-                            <div id="weather-main-feel"></div>
-                            <br>
-                            <div id="weather-sys-sunrise"></div>
-                            <div id="weather-sys-sunset"></div>
-                            <br>
-                            <div class="smaller-font-size" id="weather-main-max-temp"></div>
-                            <div class="smaller-font-size" id="weather-main-min-temp"></div>
+                                <div id="location-name"></div>
+                                    <img src="" title="weather" id="weather-icon">
+                                <div id="weather-main-temp"></div>
+                                <div id="weather-main-feel"></div>
+                                <br>
+                                <div id="weather-sys-sunrise"></div>
+                                <div id="weather-sys-sunset"></div>
+                                <br>
+                                <div class="smaller-font-size" id="weather-main-max-temp"></div>
+                                <div class="smaller-font-size" id="weather-main-min-temp"></div>
                             </div>
                         </div>
                     </div>
@@ -86,6 +86,7 @@
                                         <div class="modal-body">
                                             <div>
                                                 <form>
+                                                        <div class="alert alert-danger d-none" id="city-alert" role="alert">The city you entered was not found</div>
                                                         <div id="type-location" class="form-group">
                                                         <label for="new-location" class="col-form-label font-lato">Please type your new location:</label>
                                                         <br>
