--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
     <!-- FAQ Modal (has to be outside the HEADER tag)-->
     <div class="modal fade" id="faqModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Frequently Asked Questions</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Frequently Asked Questions</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <h6>What if I don't like what I see?</h6>
+                    <p>Just hit refresh and you get a new joke, movie or meal recommendation. As we unfortunately cannot change the weather, if we do not like it, this does not work for the weather report <i class="far fa-smile-wink"></i>.</p>
+                    <br>
+                    <h6>How can I change my location to see the weather accordingly?</h6>
+                    <p>Just click on "change location", type your new location and click the submit button.</p>
+                    <br>
+                    <h6>Note:</h6>
+                    <p>If you keep the "My Daily Dashboard" page open in your browser, it will refresh every 24hours automatically.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
-            <div class="modal-body">
-                <h6>What if I don't like what I see?</h6>
-                <p>Just hit refresh and you get a new joke, movie or meal recommendation. As we unfortunately cannot change the weather, if we do not like it, this does not work for the weather report <i class="far fa-smile-wink"></i>.</p>
-                <br>
-                <h6>How can I change my location to see the weather accordingly?</h6>
-                <p>Just click on "change location", type your new location and click the submit button.</p>
-                <br>
-                <h6>Note:</h6>
-                <p>If you keep the "My Daily Dashboard" page open in your browser, it will refresh every 24hours automatically.</p>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
         </div>
     </div>
     <!-- HEADER -->
@@ -87,7 +87,7 @@
                         <div class="col innerbox-content two-boxes-row-height">
                             <div>
                                 <div id="location-name"></div>
-                                    <img src="" title="weather" id="weather-icon">
+                                <img src="" title="weather" id="weather-icon">
                                 <div id="weather-main-temp"></div>
                                 <div id="weather-main-feel"></div>
                                 <br>
@@ -117,11 +117,11 @@
                                                 <form>
                                                         <div class="alert alert-danger d-none" id="city-alert" role="alert">The city you entered was not found</div>
                                                         <div id="type-location" class="form-group">
-                                                        <label for="new-location" class="col-form-label font-lato">Please type your new location:</label>
-                                                        <br>
-                                                        <input type="text" class="form-control" id="new-location">
-                                                        <br>
-                                                        <button id="submit-change-location" class="btn btn-info" type="button" data-dismiss="modal">Save changes</button>
+                                                            <label for="new-location" class="col-form-label font-lato">Please type your new location:</label>
+                                                            <br>
+                                                            <input type="text" class="form-control" id="new-location">
+                                                            <br>
+                                                            <button id="submit-change-location" class="btn btn-info" type="button" data-dismiss="modal">Save changes</button>
                                                         </div>
                                                 </form>
                                             </div>
@@ -205,12 +205,11 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <h6>Ingredients</h6>
-                                                    <div id="mealIngredientsList">
-                                                    </div>
+                                                    <div id="mealIngredientsList"></div>
                                                 </div>
-                                            <div class="col-md-6">
-                                                <h6>Preparation</h6>
-                                                <p id="meal-preparation"></p>
+                                                <div class="col-md-6">
+                                                    <h6>Preparation</h6>
+                                                    <p id="meal-preparation"></p>
                                                 </div>
                                             </div>    
                                         </div>
@@ -228,7 +227,9 @@
     </section>
     <!-- FOOTER -->
     <footer class="footer-style text-center">
-        <div><i class="far fa-copyright"></i> Jacqueline Kraus</div>
+        <div>
+            <i class="far fa-copyright"></i> 2021 Jacqueline Kraus
+        </div>
     </footer>
     <!-- SCRIPTS -->
     <script src="assets/js/script.js" type="text/javascript"></script>
